# calculatorv1

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  GITHUB_SETUP.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: release-please.yml
.github/workflows/: develop-branch-ci.yml  feature-branch-ci.yml  main-branch-ci.yml  release-please.yml  release.yml
app/: __init__.py  main.py
tests/: __init__.py  test_integration.py  test_main.py
